Replaced foot with kitty

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -15,11 +15,11 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term foot
+set $term kitty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu j4-dmenu-desktop --term="foot" --no-exec | xargs swaymsg exec --
+set $menu j4-dmenu-desktop --term="kitty" --no-exec | xargs swaymsg exec --
 
 ### Output configuration
 #
