Kitty Adawita theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,3 +2,9 @@ font_family					MesloLGS NF
 font_size					10
 
 enable_audio_bell			no
+
+
+# BEGIN_KITTY_THEME
+# Adwaita dark
+include current-theme.conf
+# END_KITTY_THEME
