--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,8 +3,9 @@ font_size					10
 
 enable_audio_bell			no
 
+background_opacity			0.8
 
 # BEGIN_KITTY_THEME
-# Adwaita dark
+# Adwaita darker
 include current-theme.conf
 # END_KITTY_THEME
