--- a/.config/sway/config
+++ b/.config/sway/config
@@ -24,7 +24,7 @@ set $menu j4-dmenu-desktop --term="kitty" --no-exec | xargs swaymsg exec --
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg ~/Pictures/Wallpapers/Eagle.png fill
 #
 # Example configuration:
 #
