--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,9 +1,14 @@
 font_family					MesloLGS NF
 font_size					10
 
+tab_bar_style				powerline
+tab_powerline_style			slanted
+
 enable_audio_bell			no
 
 background_opacity			0.8
+
+window_padding_width		12
 
 # BEGIN_KITTY_THEME
 # Adwaita darker
