--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -2,10 +2,14 @@
 	"layer": "top",
 	"modules-left": ["sway/workspaces", "sway/mode"],
 	"modules-center": ["sway/window"],
-	"modules-right": ["battery", "clock"],
+	"modules-right": ["tray", "battery", "clock"],
 	
 	"sway/window": {
 		"max-length": 50
+	},
+
+	"tray": {
+		"spacing": 6
 	},
 	"battery": {
 		"format": "{icon} {capacity}%",
