Changed waybar click behaviours

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -19,13 +19,14 @@
 		"format-muted": "{desc} 󰖁",
 		"format-icons": ["󰕿", "󰖀", "󰕾"],
 		"scroll-step": 5,
-		"on-click": "pavucontrol"
+		"on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
+		"on-click-right": "pavucontrol"
 	},
 	"bluetooth": {
 		"format-off": "󰂲",
 		"format-on": "󰂯",
 		"format-connected": "󰂱 {num_connections} connected",
-		"on-click": "blueman-manager"
+		"on-click-right": "blueman-manager"
 	},
 	"battery": {
 		"format": "{icon} {capacity}%",
@@ -44,3 +45,4 @@
 		"format-alt": "{:%A %d %B %H:%M}"
 	}
 }
+// vi: ft=json
