Waybar: Added backlight info for internal monitor

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,48 +1,16 @@
-{
+[{
+	"output": "eDP-1",
+	"layer": "bottom",
+	"modules-left": ["sway/workspaces", "sway/scratchpad", "sway/mode"],
+	"modules-center": ["sway/window"],
+	"modules-right": ["tray", "pulseaudio", "backlight", "battery", "bluetooth", "network", "clock"],
+	"include": "~/.config/waybar/modules.json"
+}, {
+	"output": ["!eDP-1", "*"],
 	"layer": "bottom",
 	"modules-left": ["sway/workspaces", "sway/scratchpad", "sway/mode"],
 	"modules-center": ["sway/window"],
 	"modules-right": ["tray", "pulseaudio", "battery", "bluetooth", "network", "clock"],
-	
-	"sway/window": {
-		"max-length": 100
-	},
-	"sway/scratchpad": {
-		"format": "{icon} {count}",
-		"format-icons": ["", "󰖯", "󰖲"]
-	},
-	"tray": {
-		"spacing": 6
-	},
-	"pulseaudio": {
-		"format": "{desc} {icon} {volume}%",
-		"format-muted": "{desc} 󰖁",
-		"format-icons": ["󰕿", "󰖀", "󰕾"],
-		"scroll-step": 5,
-		"on-click": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
-		"on-click-right": "pavucontrol"
-	},
-	"bluetooth": {
-		"format-off": "󰂲",
-		"format-on": "󰂯",
-		"format-connected": "󰂱 {num_connections} connected",
-		"on-click-right": "blueman-manager"
-	},
-	"battery": {
-		"format": "{icon} {capacity}%",
-		"format-icons": ["󰂎", "󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
-	},
-	"network": {
-		"format-ethernet": "󰈁",
-		"tooltip-format-ethernet": "{ifname} - {ipaddr}",
-		"format-wifi": "{icon} {signalStrength}%",
-		"tooltip-format-wifi": "{ifname} - {ipaddr} - {frequency}MHz - {signaldBm}dBm",
-		"format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
-		"format-disconnected": "󰌙",
-		"tooltip-format-disconnected": "Disconnected"
-	},
-	"clock": {
-		"format-alt": "{:%A %d %B %H:%M}"
-	}
-}
+	"include": "~/.config/waybar/modules.json"
+}]
 // vi: ft=json
