--- a/.config/sway/config
+++ b/.config/sway/config
@@ -19,7 +19,7 @@ set $term kitty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu j4-dmenu-desktop --term="kitty" --no-exec | xargs swaymsg exec --
+set $menu wofi --show=drun
 
 ### Output configuration
 #
