--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -190,12 +190,20 @@ mode "resize" {
     bindsym $down resize grow height 10px
     bindsym $up resize shrink height 10px
     bindsym $right resize grow width 10px
+    bindsym Shift+$left resize shrink width 50px
+    bindsym Shift+$down resize grow height 50px
+    bindsym Shift+$up resize shrink height 50px
+    bindsym Shift+$right resize grow width 50px
 
     # Ditto, with arrow keys
     bindsym Left resize shrink width 10px
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
     bindsym Right resize grow width 10px
+    bindsym Shift+Left resize shrink width 50px
+    bindsym Shift+Down resize grow height 50px
+    bindsym Shift+Up resize shrink height 50px
+    bindsym Shift+Right resize grow width 50px
 
     # Return to default mode
     bindsym Return mode "default"
