Kitty: Don't ask for confirmation when closing windows

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -1,14 +1,11 @@
 font_family					MesloLGS NF
 font_size					10
-
 tab_bar_style				powerline
 tab_powerline_style			slanted
-
 enable_audio_bell			no
-
 background_opacity			0.8
-
 window_padding_width		12
+confirm_os_window_close		0
 
 # BEGIN_KITTY_THEME
 # Adwaita darker
