--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -16,6 +16,8 @@ set $up k
 set $right l
 # Your preferred terminal emulator
 set $term kitty
+# Preferred browser
+set $browser firefox
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -71,6 +73,9 @@ output * bg ~/Pictures/Wallpapers/Eagle.png fill
 
     # Start your launcher
     bindsym $mod+d exec $menu
+
+	# Start a browser
+	bindsym $mod+i exec $browser
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
