--- a/home/.config/sway/config
+++ b/home/.config/sway/config
@@ -183,6 +183,11 @@ output * bg ~/Pictures/Wallpapers/Eagle.png fill
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
+
+	# Use wofi to open a window in the scratchpad
+	bindsym $mod+equal exec ~/.bin/wofi_sway_scratchpad
+
+
 #
 # Resizing containers:
 #
