--- a/packages/system-configuration/getty-skip-username.conf
+++ b/packages/system-configuration/getty-skip-username.conf
@@ -1,3 +1,3 @@
 [Service]
 ExecStart=
-ExecStart=-/sbin/agetty -o '-p -- username' --noclear --skip-login - $TERM
+ExecStart=-/sbin/agetty -o '-p -- sebastian' --noclear --skip-login - $TERM
