Using JetBrains Mono font

--- a/home/.config/kitty/kitty.conf
+++ b/home/.config/kitty/kitty.conf
@@ -1,4 +1,4 @@
-font_family					MesloLGS NF
+font_family					JetBrainsMono Nerd Font
 font_size					10
 tab_bar_style				powerline
 tab_powerline_style			slanted
