Update oh my zsh

--- a/home/.config/swayidle/config
+++ b/home/.config/swayidle/config
@@ -1,5 +1,6 @@
 timeout 290 "brightnessctl --save set 10%" resume "brightnessctl --restore"
 timeout 300 "swaylock"
 timeout 600 "systemctl hybrid-sleep"
-before-sleep "swaylock"
+before-sleep "swaylock; swaymsg output '*' power off"
+after-resume "swaymsg output '*' power on"
 lock "swaylock"
