--- a/home/.config/kanshi/config
+++ b/home/.config/kanshi/config
@@ -11,3 +11,8 @@ profile {
 	output eDP-1 disable
 	output "Samsung Electric Company SAMSUNG 0x00000F00" mode 3840x2160 scale 2.0
 }
+
+profile {
+	output eDP-1 disable
+	output "Samsung Electric Company SAMSUNG 0x01000E00" mode 3840x2160 scale 2.0
+}
