Turning off displays when idle

--- a/home/.config/swayidle/config
+++ b/home/.config/swayidle/config
@@ -1,3 +1,4 @@
 timeout 290 "brightnessctl --save set 10%" resume "brightnessctl --restore"
 timeout 300 "swaylock"
+timeout 330 "swaymsg output '*' power off" resume "swaymsg output '*' power on"
 lock "swaylock"
